# SlicerEducation

./: CMakeLists.txt  LICENSE  README.md
SlicerMCQ/: CMakeLists.txt  SlicerMCQ.py
SlicerMCQ/Resources/UI/: SlicerMCQ.ui
